# c-samples

./: README.md
box-1/: .scene.xml.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  config.status  configure  gmon.out  layout.xml  layout_game.xml  log  logc  logs  lolg  scene.xml  test.dot  test.dot.box.dependers
box-1/src/: Makefile  Makefile.am  Makefile.in  Makefile2.am  main.cpp
demo-1/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  log
demo-1/autom4te.cache/: output.1  traces.1
demo-1/src/: Makefile  Makefile.am  Makefile.in  demo  demoWindow.cpp  main.cpp
js-1/: Makefile
js-1/src/: main.cpp
lizard/: Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  lizard  main.cpp  tecplot.phy
lizard/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lizard/src/: Makefile  Makefile.am  Makefile.in  drawing.cpp  liz.cpp  liz.h  lizard  main.cpp  main.h  plane.cpp  plane.h
lizard/src/.deps/: drawing.Po  liz.Po  main.Po  plane.Po
phys-1/: Makefile
phys-1/src/: main.cpp
quad/: Attitude.cpp  Attitude.h  Brain.cpp  Brain.h  Command.cpp  Command.h  Makefile  Objective.h  Plant.cpp  Plant.h  Position.cpp  Position.h  Quadrotor.cpp  Quadrotor.h  Simulation.h  Telem.cpp  Telem.h  att.txt  att_param.txt  core  main.cpp  plot.py  pos.txt  quad
quad/Quad/: Array.h  Attitude.cpp  Attitude.h  Brain.cpp  Brain.h  CMakeLists.txt  Command.cpp  Except.h  FDA.cpp  FDA.h  Makefile  Plant.cpp  Position.cpp  Position.h  Quadrotor.cpp  Telem.cpp  Telem.h
quad/Quad/src/quadrotor/: array.h  attitude.cpp  plant.cpp  position.cpp  quadrotor.cpp  telem.cpp  telem.h
quad/sim1/: Makefile  att.txt  att_param.txt  brain.txt  main.cpp  plant.txt  plot.py  pos.txt  pos_param.txt  quad
shadow/: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
shadow/autom4te.cache/: output.1  traces.0  traces.1
shadow/inc/: main.h
shadow/src/: FPS_COUNTER.cpp  Makefile  Makefile.am  Makefile.in  TIMER.cpp  main.cpp  scene.cpp  shadow
shadow/src/.deps/: FPS_COUNTER.Po  TIMER.Po  main.Po  scene.Po
