bin_PROGRAMS = box

box_SOURCES = main.cpp

CXXFLAGS = -std=c++0x -D_DEBUG

LIBS = -lglutpp -lGL -lglut -lGLU -lmath -lpng \
-lrt \
-lNEB \
-lGRU \
-lGUL \
-lglee \
-lMaths \
-lJSL \
-lSIG \
-ltinyxml \
-lGL \
-lGLU \
-lglut \
-lpthread \
-lPhysX3 \
-lSimulationController \
-lLowLevel \
-lLowLevelCloth \
-lPhysXProfileSDK \
-lPhysX3Extensions \
-lSceneQuery \
-lPhysX3Common \
-lPhysX3CharacterKinematic \
-lPhysX3Vehicle \
-lPhysX3Cooking \
-lPvdRuntime \
-lRepX3 \
-lPxTask \
-lX11 



