bin_PROGRAMS = box

box_SOURCES = main.cpp

CXXFLAGS = -std=c++0x -D_DEBUG -I$(HOME)/Programming/C++/external/PhysX/Include -L$(HOME)/Programming/C++/external/PhysX/Lib/linux64


LIBS = \
	-lglutpp -lgal -lmath -lneb \
	-lGL -lglut -lGLU -lGLEW \
	-lpng \
	-lrt \
	-ltinyxml \
	-lpthread \
	-lPhysX3 \
	-lSimulationController \
	-lLowLevel \
	-lLowLevelCloth \
	-lPhysXProfileSDK \
	-lPhysX3Extensions \
	-lSceneQuery \
	-lPhysX3Common \
	-lPhysX3CharacterKinematic \
	-lPhysX3Vehicle \
	-lPhysX3Cooking \
	-lPvdRuntime \
	-lRepX3 \
	-lPxTask \
	-lX11 



